# ezstack-fasthtml

./: .gitignore  dagger.json  justfile  pyproject.toml
sdk/src/dagger/client/: gen.py
src/app/: __init__.py  main.py
src/water_bot/: __init__.py  main.py
tests/: test_calculator.py
